--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
     "version": "1.5.0",
     "license": "MIT",
     "dependencies": {
-        "@javascribble/quantum": "^1.5.0"
+        "@javascribble/quantum": "^1.5.8"
     },
     "devDependencies": {
         "live-server": "*"
     },
     "scripts": {
-        "build": "cd ../rollup-quantum-build && npm start ../quantum-tabs/source ../quantum-tabs/build",
+        "build": "cd ../rollup-quantum-build && npm start ../quantum-tabs",
         "start": "live-server --open=/test/debug.html",
         "postversion": "npm publish --access public"
     },
-    "main": "./source/main.js",
+    "main": "./bundles/main.js",
     "homepage": "https://github.com/javascribble/quantum-tabs#readme",
     "repository": {
         "type": "git",
@@ -30,6 +30,7 @@
     ],
     "files": [
         "build",
+		"bundles",
         "source"
     ]
 }
